# AegisAgent-public

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  伯克利phase1.md  接入单.xlsx  接入指南.md  调用codex.md
.githooks/: post-commit
agentbeats/: README.md  requirements.txt
agentbeats/emulator_host/: Makefile  README.md  reset_device.sh  start_adb_server.sh  start_emulator.sh  wait_until_ready.sh
agentbeats/green/: Dockerfile  README.md
agentbeats/tools/: send_step1_assessment.py  validate_step2_emulator_docker.py  validate_step2_remote_adb.py  validate_step3_contract.py  validate_step5_droidrun_benign.py  validate_step6_harness_benign.py  validate_step7_metrics.py
android/: BASELINE.md
docs/: INDEX.md
docs/governance/: ETHICS_AND_DUAL_USE.md  REPRODUCIBILITY.md  SECURITY.md  agent_providers.md
docs/oracles/: oracle_catalog.md  高价值 Oracle 扩展清单.md
docs/plans/: Agent vs Agent实现方案.md  Phase3详细方案.md  Phase4升级计划.md  Phase4详细计划（评测闭环）.md  phase3分类.md  phase3数据表.md  整理计划.md  方案.md  更新计划.md
mas-agents/adapters/agentprog/env/: README.md  pyproject.toml
mas-agents/registry/: agent_registry.yaml  leaderboard_snapshot.json
mas-harness/: README.md
mas-harness/docs/: INDEX.md
mas-hidden/: README.md
mas-public/: README.md
mas-spec/: MAS_SPEC_DRAFT.md  README.md  coverage_matrix_template.csv  lifecycle.md  metrics_reporting.md  oracle_framework.md  policy_origin_sets.md  primitives.md  properties_violations.md  protocols.md  spec_language.md  system_model.md  threat_model.md
mas_harness/: __init__.py
(+444 files in other folders)
